# LlamaIndexDemo

./: .gitignore  Dockerfile  Dockerfile.bak  Makefile  README.md  docker-compose.yaml  poetry-pyproject.toml  pyproject.toml  requirements.txt
evaluation/: evaluation_rag_dataset.json  evaluation_results.json
evaluation/llama3-70b/: eval_results.csv  eval_results.html  eval_results.json
evaluation/llama3-8b/: eval_results.csv  eval_results.html  eval_results.json
evaluation/mixtral/: eval_results.csv  eval_results.html  eval_results.json
src/: docling_test.py  main.py  main2.py  ollamarama.py  ollamaramaagent.py  ollamaramaagentworker.py  onnx_test.py
src/crayon/: __init__.py  finance_chatbot.py  finance_chatbot_hello_world.py  finance_chatbot_simple.py  run_evaluation.py  run_ingestion.py  run_ingestion_hello_world.py  run_ingestion_simple.py
src/crayon/chatbots/: finance_chatbot.py
src/crayon/evaluation/: evaluator.py
src/crayon/ingestion/chunking/: __init__.py  strategies.py
src/crayon/ingestion/finance/: __init__.py  finance_data.py  ingestion.py
src/crayon/ingestion/indexing/: __init__.py  strategies.py
src/crayon/retrieval/: recursive_retrieval.py
