[tool.poetry]
name = "llamaindexdemo"
version = "0.1.0"
description = ""
authors = ["Alex <alex@akhbar.home>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
llama-index-agent-openai = "^0.2.2"
llama-index-cli = "^0.1.11"
llama-index-core = "^0.10.29"
llama-index-embeddings-huggingface = "^0.2.0"
llama-index-embeddings-openai = "^0.1.7"
llama-index-extractors-entity = "^0.1.2"
llama-index-indices-managed-llama-cloud = "^0.1.5"
llama-index-legacy = "^0.9.48"
llama-index-llms-ollama = "^0.1.2"
llama-index-llms-openai-like = "^0.1.3"
llama-index-llms-openai = "^0.1.15"
llama-index-multi-modal-llms-openai = "^0.1.5"
llama-index-packs-raptor = "^0.1.3"
llama-index-program-openai = "^0.1.5"
llama-index-question-gen-openai = "^0.1.3"
llama-index-readers-file = "^0.1.19"
llama-index-readers-llama-parse = "^0.1.4"
llama-index-readers-mongodb = "^0.1.4"
llama-index-readers-web = "^0.1.9"
llama-index-readers-wikipedia = "^0.1.4"
llama-index-storage-docstore-mongodb = "^0.1.3"
llama-index-storage-index-store-mongodb = "^0.1.2"
llama-index-storage-kvstore-mongodb = "^0.1.2"
llama-index-tools-google = "^0.1.3"
llama-index-vector-stores-chroma = "^0.1.6"
llama-index-vector-stores-faiss = "^0.1.2"
llama-index = "^0.10.29"
llama-parse = "^0.4.1"
llamaindex-py-client = "^0.1.18"
ollama = "^0.1.8"
gradio = "^4.26.0"
spacy = "^3.7.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
