[project]
name = "llamaindexdemo"
version = "0.1.0"
description = "Demo application for Llama Index"
authors = [
    { name = "Vaagan Holding AS", email = "alexander.vaagan@gmail.com" },
]
readme = "README.md"
license = { text = "CC-BY-NC-SA-4.0" }
requires-python = ">=3.11,<3.13"

dependencies = [
    "gradio>=5.15.0",
    "gradio-client>=1.3.0",
    "spacy>=3.7.4",
    "llama-index>=0.12.13",
    "llama-index-agent-openai>=0.4.2",
    "llama-index-llms-openai>=0.3.14",
    "llama-index-llms-openai-like>=0.3.3",
    "llama-index-program-openai>=0.3.1",
    "llama-index-question-gen-openai>=0.3.0",
    "llama-index-readers-llama-parse>=0.4.0",
    "llama-index-storage-docstore-mongodb>=0.3.0",
    "llama-index-storage-index-store-mongodb>=0.4.0",
    "llama-index-vector-stores-chroma>=0.4.1",
    "llama-parse>=0.5.20",
    "llama-index-embeddings-huggingface>=0.5.1",
    "unstructured[all-docs]>=0.16.15",
    "unstructured-pytesseract>=0.3.13",
    "unstructured-paddleocr>=2.8.1.0",
    "pymupdf>=1.25.2",
    "llama-index-readers-file>=0.4.4",
    "paddleocr>=2.9.1",
    "paddlepaddle-gpu>=2.6.2",
    "vaaale-paddleocr>=2.6.1.3.post2",
    "tonic-validate>=6.2.0",
    "llama-index-evaluation-tonic-validate>=0.4.0",
    "deepeval>=2.2.6",
    "docling>=2.18.0",
    "llama-index-readers-docling>=0.3.0",
    "llama-index-node-parser-docling>=0.3.0",
]


[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

